<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.gang.module_user.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_login_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="关闭"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_login_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="注册"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_login_title"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_close" />

        <TextView
            android:id="@+id/user_login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/user_login_desc"
            android:textColor="@color/user_gray_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_title" />

        <EditText
            android:id="@+id/user_login_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/user_login_name"
            android:inputType="phone"
            android:padding="5dp"
            android:text="@={vm.name}"
            android:textColor="@color/user_gray_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_desc" />

        <View
            android:id="@+id/user_login_temp_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="#efefef"
            app:layout_constraintTop_toBottomOf="@+id/user_login_name" />

        <EditText
            android:id="@+id/user_login_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:hint="@{vm.isMobile?@string/user_login_code:@string/user_login_pwd}"
            android:inputType="textPassword"
            android:padding="5dp"
            android:text="@={vm.pwd}"
            android:textColor="@color/user_gray_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_temp_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/user_login_get"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:visibility="@{vm.isMobile?View.VISIBLE: View.INVISIBLE}"
            app:layout_constraintBaseline_toBaselineOf="@+id/user_login_pwd"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/user_login_temp_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="#efefef"
            app:layout_constraintTop_toBottomOf="@+id/user_login_pwd" />

        <TextView
            android:id="@+id/user_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:onClick="@{(view)->vm.setMobile()}"
            android:text="@{vm.isMobile ? @string/user_login_type_0:@string/user_login_type_1}"
            android:textColor="@color/user_blue"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_temp_2" />

        <Button
            android:id="@+id/user_login_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@{(vm.name.length()!=11 || vm.pwd.length()==0)?@drawable/user_login_btn_off:@drawable/user_login_btn_on}"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="登录"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_temp_2" />

        <TextView
            android:id="@+id/user_login_temp_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="登录即代表同意"
            android:textColor="@color/user_gray_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/user_login_temp_4"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_ok" />

        <TextView
            android:id="@+id/user_login_temp_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="《用户协议》"
            android:textColor="@color/user_blue"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_login_temp_3"
            app:layout_constraintTop_toBottomOf="@+id/user_login_ok" />

        <TextView
            android:id="@+id/user_login_other_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="微信"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_login_other_2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/user_login_other_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="支付宝"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_login_other_3"
            app:layout_constraintStart_toEndOf="@+id/user_login_other_1" />

        <TextView
            android:id="@+id/user_login_other_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="微博"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_login_other_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>